<resources>
    <string name="app_name">Cook Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello!</string>
    <string name="Ls_blank_fragment">Let\'s cook!</string>
    <string name="Lsgo_blank_fragment_button">Let\'s Go!</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_f_p_t_s_s">Title title, title title,Title title, title title,Title title, title title,Title title, title title,Title title, title title</string>
    <string name="cooking_time_f_p_t_s_s">Cooking time: %1$d min</string>
    <!--Здесь %1$d — это специальный маркер для вставки целого числа в строку. В этом примере servings
    — это ключ для доступа к строке, а %1$d — это место, куда будет подставлено значение.-->
    <string name="servering_f_p_t_s_s">Servings: %1$d</string>
    <string name="summary_f_p_t_s_s">of your daily requirements of vitamins and minerals</string>
    <string name="back_button">Back</string>
    <string name="text_or">Or</string>
    <string name="text_register">Create Account</string>
    <string name="text_login">Sign In</string>
    <string name="text_hi_start_view">Cooking App</string>
    <string name="text_cooking_time_start_view">Cooking Time!</string>
    <string name="email_or_nickname">Email or Nickname</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>


    <!--    <string name="lorem_ipsum">-->
    <!--        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris-->
    <!--        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus-->
    <!--        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad-->
    <!--        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend-->
    <!--        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,-->
    <!--        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n-->
    <!--        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus-->
    <!--        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed-->
    <!--        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada-->
    <!--        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,-->
    <!--        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor-->
    <!--        bibendum, vel congue leo egestas.\n\n-->
    <!--        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit-->
    <!--        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,-->
    <!--        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer-->
    <!--        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at-->
    <!--        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,-->
    <!--        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque-->
    <!--        est.\n\n-->
    <!--        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.-->
    <!--        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui-->
    <!--        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In-->
    <!--        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,-->
    <!--        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra-->
    <!--        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a-->
    <!--        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus-->
    <!--        convallis.\n\n-->
    <!--        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et-->
    <!--        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa-->
    <!--        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,-->
    <!--        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper-->
    <!--        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus-->
    <!--        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus-->
    <!--        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.-->
    <!--    </string>-->
</resources>